? la wea rara el mpu cambio de direccion i2c de nuevo

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,7 +3,7 @@
     "tasks": [
         {
             "label": "RUN",
-            "command": "./run.bat",
+            "command": ". scripts/remote_run.bat",
             "type": "shell",
             "args": [],
             "problemMatcher": [
@@ -16,7 +16,7 @@
         },
         {
             "label": "CONNECT",
-            "command": "./connect.bat",
+            "command": ". scripts/remote_connect.bat",
             "type": "shell",
             "args": [],
             "problemMatcher": [
